# TEI_MT

./: .gitignore  CMakeLists.txt  NOTICE  README.md
lcui-gui/: README.md  xmake.lua
lcui-gui/app/: ui_layout.xml  ui_style.css
lcui-gui/src/: app_main.cpp  core_api.cpp  core_api.hpp  event_queue.cpp  event_queue.hpp  job_controller.cpp  job_controller.hpp  progress_event.hpp  ui_bindings.cpp  ui_bindings.hpp
scripts/: benchmark_workers.sh
src/: config.cpp  config.hpp  main.cpp  pipeline.cpp  pipeline.hpp  segment.hpp  segment_batch.cpp  segment_batch.hpp  sorting_filter.cpp  sorting_filter.hpp  tei_reader.cpp  tei_reader.hpp  translator.hpp  translator_llama.cpp  translator_llama.hpp  writer_md.cpp  writer_md.hpp  writer_tei.cpp  writer_tei.hpp
tei-viewer/: README.md  index.html  run_viewer.bat  run_viewer.ps1  run_viewer.sh  style.css  viewer.js
